--- a/MyChat/app/build.gradle
+++ b/MyChat/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
+    useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
         applicationId "com.rogergcc.mychat"
         minSdkVersion 16
@@ -26,4 +28,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation ('io.socket:socket.io-client:0.9.0') {
+// excluding org.json which is provided by Android
+        exclude group: 'org.json', module: 'json'
+    }
 }
