--- a/ConductorTaxi/app/src/main/AndroidManifest.xml
+++ b/ConductorTaxi/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBnzcI2JLGnv-ubYffyaadjoxtESppP1GI"/>
+            android:value="@string/google_maps_key"/>
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
