--- a/ConductorTaxi/app/src/main/AndroidManifest.xml
+++ b/ConductorTaxi/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-feature android:name="android.hardware.location.gps" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:name=".App"
@@ -17,7 +19,7 @@
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
-
+        <service android:name=".ServicioLocalizacion"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
