--- a/ClienteEsis/.gitignore
+++ b/ClienteEsis/.gitignore
@@ -31,6 +31,8 @@ out/
 #  Uncomment the following line in case you need and you don't have the release build type files in your app
 # release/
 
+secrets.xml
+api_key.xml
 # Gradle files
 .gradle/
 build/
