--- a/ConductorTaxi/.gitignore
+++ b/ConductorTaxi/.gitignore
@@ -28,6 +28,9 @@
 bin/
 gen/
 out/
+
+api_key.xml
+
 #  Uncomment the following line in case you need and you don't have the release build type files in your app
 # release/
 
