--- a/ConductorTaxi/app/src/main/AndroidManifest.xml
+++ b/ConductorTaxi/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
+            android:value="@string/g_maps_api_key"/>
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
