--- a/ConductorTaxi/app/build.gradle
+++ b/ConductorTaxi/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     }
 
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+
+    implementation 'com.karumi:dexter:5.0.0'
 }
