--- a/MiFotoDrive/app/build.gradle
+++ b/MiFotoDrive/app/build.gradle
@@ -56,4 +56,8 @@ dependencies {
                 module: "httpclient"
     }
     implementation 'com.karumi:dexter:5.0.0'
+    //
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
 }
