--- a/APIREST_PRODUCTO/package.json
+++ b/APIREST_PRODUCTO/package.json
@@ -1,16 +1,19 @@
 {
-	"name": "productsapp",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"body-parser": "^1.18.2",
-		"express": "^4.16.3",
-		"mongoose": "^5.0.11"
-	}
+  "name": "productsapp",
+  "version": "1.0.0",
+  "description": "api rest products evennode",
+  "main": "index.js",
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Roger C",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.16.3",
+    "mongoose": "^5.0.11"
+  },
+  "devDependencies": {}
 }
