--- a/ConductorTaxi/app/build.gradle
+++ b/ConductorTaxi/app/build.gradle
@@ -38,4 +38,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:15.0.1'
 
     implementation 'com.karumi:dexter:5.0.0'
+
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.google.android.material:material:1.1.0'
 }
