--- a/MiFCMESIS/app/src/main/AndroidManifest.xml
+++ b/MiFCMESIS/app/src/main/AndroidManifest.xml
@@ -25,10 +25,24 @@
             </intent-filter>
         </service>
 
-<!--        <meta-data android:name="com.google.firebase.messaging.default_notification_icon"-->
-<!--            android:resource="@drawable/ic_stat_name"/>-->
-<!--        <meta-data android:name="com.google.firebase.messaging.default_notification_color"-->
-<!--            android:resource="@color/colorPrimary"/>-->
+        <!-- Add these line -->
+        <!-- [START] -->
+        <!-- Set custom default icon -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_stat_name" />
+        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming notification message.-->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
+
+        <!--  Set fcm default channel-->
+<!--        <meta-data-->
+<!--            android:name="com.google.firebase.messaging.default_notification_channel_id"-->
+<!--            android:value="@string/default_notification_channel_id" />-->
+
+        <!-- [END] -->
+
 
     </application>
 
