--- a/FirebaseDevicetoDevice/app/build.gradle
+++ b/FirebaseDevicetoDevice/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
+apply plugin: 'io.fabric'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -30,4 +31,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'com.android.volley:volley:1.1.1'
+
+
+    // (Recommended) Add Analytics
+//    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+
+    // Add dependency
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 }
