--- a/FirebaseDevicetoDevice/build.gradle
+++ b/FirebaseDevicetoDevice/build.gradle
@@ -17,6 +17,9 @@ buildscript {
         // Add dependency
         classpath 'io.fabric.tools:gradle:1.31.2'  // Crashlytics plugin
 
+        def nav_version = "2.1.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
