--- a/ORMRoom/app/src/main/AndroidManifest.xml
+++ b/ORMRoom/app/src/main/AndroidManifest.xml
@@ -9,9 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UpdateContactActivity"></activity>
-        <activity android:name=".CreateContactActivity" />
-        <activity android:name=".MainActivity">
+        <activity
+            android:windowSoftInputMode="stateHidden"
+
+            android:name=".ui.editcontact.EditContactActivity">
+
+        </activity>
+        <activity
+            android:windowSoftInputMode="stateHidden"
+
+            android:name=".ui.newcontact.CreateContactActivity" />
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
