--- a/FirebaseDevicetoDevice/app/build.gradle
+++ b/FirebaseDevicetoDevice/app/build.gradle
@@ -35,7 +35,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
+
+//    implementation 'com.google.firebase:firebase-messaging:20.1.0'
+
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-plus:17.0.0'
     testImplementation 'junit:junit:4.12'
